--- a/StrengthFaithHope.WebApp/ClientApp/src/app/components/message-list/message-list.component.html
+++ b/StrengthFaithHope.WebApp/ClientApp/src/app/components/message-list/message-list.component.html
@@ -3,7 +3,7 @@
       <mat-card   class=" mat-card mat-focus-indicator" style="max-width: 20rem;"  >
         <mat-card-header>
           <div  mat-card-avatar class="material-icons">
-            done_outline
+            done_outlinew
             </div>
           <mat-card-title>Title</mat-card-title>
         </mat-card-header>
@@ -12,7 +12,7 @@
         </mat-card-content>
         <mat-card-actions style="text-align: right;">
           <span class="material-icons " >
-            cloud_download share
+            cloud_download share2
             </span>
         </mat-card-actions>
       </mat-card>
