--- a/StrengthFaithHope.WebApp/ClientApp/src/app/components/message-list/message-list.component.html
+++ b/StrengthFaithHope.WebApp/ClientApp/src/app/components/message-list/message-list.component.html
@@ -3,16 +3,16 @@
       <mat-card   class=" mat-card mat-focus-indicator" style="max-width: 20rem;"  >
         <mat-card-header>
           <div  mat-card-avatar class="material-icons">
-            done_outlinew
+            done_outline
             </div>
-          <mat-card-title>Title</mat-card-title>
+          <mat-card-title>{{message.title}}</mat-card-title>
         </mat-card-header>
         <mat-card-content>
           {{ message.sentence}}
         </mat-card-content>
         <mat-card-actions style="text-align: right;">
           <span class="material-icons " >
-            cloud_download share2
+            cloud_download share
             </span>
         </mat-card-actions>
       </mat-card>
